update basic grammers for golang

--- a/Programming language/golang/基本语法/类型、方法、控制结构.md
+++ b/Programming language/golang/基本语法/类型、方法、控制结构.md
@@ -143,6 +143,7 @@ func main() {
 
 说明：
 - 这种类型的说明只能用于局部变量，即方法内部。此时，golang 会进行类型推断，数字会被理解为 int 或者 float64。
+- 短变量声明左边一定要有至少一个未声明变量。
 
 ### 注意事项
 - 同作用域下，同名变量只能声明一次
@@ -170,6 +171,72 @@ func main() {
 
 # 方法
 
+## 方法声明：`func funcName([<name type>]) [<name type>]`
+
+```go
+// 只有一个返回值，不需要用括号括起来
+func Func0(name string) string {
+	return "Hello, " + name
+}
+// 多个参数，多个返回值，参数有名字，返回值没有
+func Func1(a string, b int) (int, string) {
+	return 33, "Ciao!"
+}
+// 返回值有名字，可以在内部直接复制，然后返回
+// 也可以忽略命名的返回值，直接返回别的
+func Func2(a string, b string) (age int, name string) {
+	age = 18
+	name = "Elena"
+
+	return
+	// 或者可以这样
+	// return 18, "Elena"
+}
+// 多个参数具有相同类型放在一起，可以只写一次类型
+func Func3(a, b, c string, abc, bcd int, p string) (d, e int, g string){
+	d = 13
+	e = 14
+	g = "Ciao Ciao"
+	return
+}
+// 不定参数。不定参数要放在最后面
+func Func4(a string, b int, names...string){
+	// 使用时，可以直接把 names 看成切片
+	for _, name := range names {
+		fmt.Println(name)
+	}
+}
+```
+
+包括四个部分：
+- 关键字 `func`
+- 函数名 funcName：首字母是否大写决定了作用域
+- 参数列表：`[<name type>]`
+- 返回列表：`[<name type>]`
+  - 支持多返回值
+  - 可以命名，也可以不命名
+
+## 方法调用
+
+```go
+func main() {
+	a := Func0("Elena")
+	println(a)
+
+	b, c := Func1("a", 18)
+	println(b)
+	println(c)
+
+	// 使用 _ 忽略返回值
+	_, d := Func2("a", "b")
+	println(d)
+
+	// 不定参数后面可以传递多个值
+	Func4("Ciao", 22, "Luca", "Maria")
+	s := []string{"Julia", "Caro"}
+	Func4("Ciao", 25, s...)
+}
+```
 
 # 参考
-- [极客时间：]()
+- [极客时间：Go 进阶训练营]()
