--- a/Programming language/golang/基本语法/类型、方法、控制结构.md
+++ b/Programming language/golang/基本语法/类型、方法、控制结构.md
@@ -37,29 +37,30 @@ import (
 - 如果一个引入的包未被使用，则会报错
 - 如果不使用包，但是需要调用到包的初始化方法 `init()`，则可以使用**匿名引用**来达到目的。
 
-# 基础类型
+# 类型
+## 基础类型
 
 - golang **不会做隐式类型转换**，类型不同无法通过编译。
 
-## 数值类型：bool / int / uint / float
+### 数值类型：bool / int / uint / float
 
 明确标注了长度、有无符号
 
-### bool 类型：true / false
+#### bool 类型：true / false
 
-### int 类型：int8 / int16 / int32 / int64 / int
+#### int 类型：int8 / int16 / int32 / int64 / int
 
-### uint 类型：uint8 / uint16 / uint32 / uint64 / uint
+#### uint 类型：uint8 / uint16 / uint32 / uint64 / uint
 
-### float 类型：float32 / float64
+#### float 类型：float32 / float64
 
-## byte 类型
+### byte 类型
 byte，字节，本质是 uint8，对应的操作包在 `bytes` 上。
 ```go
 type byte = uint8
 ```
 
-## 字符串（string）
+### 字符串（string）
 
 ```go
 import (
@@ -78,19 +79,98 @@ func main() {
   - 字符数量：编码相关，用编码库来计算，例如使用 `utf8.RuneCountInString(str)`
 - 拼接：直接使用”+“即可。注意，string 只能和 string 拼接
 
-### `strings`包
+#### `strings` 包
 主要方法：
 - 查找和替换
 - 大小写转换
 - 子字符串相关
 - 相等
 
-## rune 类型
+```go
+import (
+	"fmt"
+	"strings"
+)
+
+func main() {
+	a := "Ciao"
+
+	fmt.Println(strings.Contains(a, "ao")) // true
+	fmt.Println(strings.Count(a, "i")) // 1
+	fmt.Println(strings.HasPrefix(a, "Ci")) // true
+	fmt.Println(strings.HasSuffix(a, "ao")) // true
+	fmt.Println(strings.Index(a, "ia")) // 1
+	fmt.Println(strings.Join([]string{"Buona", "Ragazza"}, ",")) // Buona,Ragazza
+	fmt.Println(strings.Repeat(a, 2)) // CiaoCiao
+	fmt.Println(strings.Replace(a, "a", "A", -1)) // CiAo
+	fmt.Println(strings.Split("a-b-c", "-")) // [a b c]
+	fmt.Println(strings.ToLower(a)) // ciao
+	fmt.Println(strings.ToUpper(a)) // CIAO
+
+	fmt.Println(len(a)) // 4
+	b := "你好"
+	fmt.Println(len(b)) // 6
+}
+```
+
+### rune 类型
 
 rune 不是 byte，它本质上是 int32（一个 rune 四个字节）。它接近一般语言的 char 或者 character 的概念
 ```go
 type rune = int32
 ```
+
+## 数组和切片
+
+### 数组：`[cap]type`
+要点：
+- 初始化
+  - 需要指定容量：`var arr [3]int // 声明一个容量为3，元素类型为 int 的数组，所有元素初始化为零值`
+  - 或者可以直接初始化：`arr := [3]int{3,11,9} // 声明并初始化一个容量为3的数组，用以初始化的元素个数必须和容量匹配`
+- 访问元素：`arr[i]`
+- 获取长度：`len(arr)`
+- 获取容量：`cap(arr)`
+- 不支持`make`初始化，不支持追加元素，不支持扩容
+
+### 切片：`[]type`
+要点：
+- 初始化
+  - 直接初始化：`s1 := []int{1,2,3}`
+  - 使用 `make([]type, length, capacity)` 初始化：`s2 := make([]int, ,3, 4)`
+- 访问元素：`s1[i]`
+- 追加元素：`s1 = append(s1, 7, 8)`
+  - 容量不够会发生扩容，创建新的切片，所以这里左边需要赋值操作
+- 获取元素数量：`len(s1)`
+- 获取切片容量：`cap(s1)`
+
+### 子切片：`arr[start:end]`
+
+数组和切片都可以通过 `[start:end]` 的形式来获取子切片
+- `arr[start:end]`：获得 `[start, end)` 之间的元素
+- `arr[:end]`：获得 `[0, end)` 之间的元素
+- `arr[start:]`：获得 `[start, len(arr))` 之间的元素
+
+注意：子切片和原本的切片共享底层数组！！
+
+## map：`map[type]type`
+要点：
+- 声明/初始化：
+  - 直接声明并初始化
+    - `var m = map[string]int{"one": 1, "two": 2}`
+    - `m := map[string]int{"one": 1, "two": 2}`
+  - 使用 `make(map[type]type, length, capacity)`
+    - `var m = make(map[string]int)`
+    - `m := make(map[string]int)`
+- 访问元素：`m["one"]`
+- 获取元素数量：`len(m)`
+- 判断是否包含元素：`if ele, ok := m["two"]; ok {`
+- 删除元素：`delete(m, "two")`
+
+注意：map 中的元素是无序的。
+
+## 指针：`*type`
+要点：
+- 
 
 # 变量和常量
 
@@ -169,9 +249,9 @@ func main() {
 - 支持类型推断
 - 无法修改值
 
-# 方法
+# 函数
 
-## 方法声明：`func funcName([<name type>]) [<name type>]`
+## 函数声明：`func funcName([<name type>]) [<name type>]`
 
 ```go
 // 只有一个返回值，不需要用括号括起来
@@ -216,7 +296,7 @@ func Func4(a string, b int, names...string){
   - 支持多返回值
   - 可以命名，也可以不命名
 
-## 方法调用
+## 函数调用
 
 ```go
 func main() {
@@ -235,6 +315,142 @@ func main() {
 	Func4("Ciao", 22, "Luca", "Maria")
 	s := []string{"Julia", "Caro"}
 	Func4("Ciao", 25, s...)
+}
+```
+
+# 控制结构
+
+## 循环
+
+### for
+```go
+func ForLoop() {
+	arr := []int{9, 1, 22, 334}
+	index := 0
+	for {
+		if index == 3 {
+			break
+		}
+		fmt.Printf("%d => %d\n", index, arr[index])
+		index++
+	}
+	fmt.Println("For loop end...\n")
+}
+
+func ForI() {
+	arr := []int{9, 1, 22, 334}
+	for i := 0; i < len(arr); i++ {
+		fmt.Printf("%d => %d\n", i, arr[i])
+	}
+	fmt.Println("For i loop end...\n")
+}
+
+func ForR() {
+	arr := []int{9, 1, 22, 334}
+	for idx, val := range arr {
+		fmt.Printf("%d => %d\n", idx, val)
+	}
+	fmt.Println("For range loop end...\n")
+
+	for idx := range arr {
+		fmt.Printf("%d => %d\n", idx, arr[idx])
+	}
+	fmt.Println("For range loop end again...\n")
+
+	for _, val := range arr {
+		fmt.Printf("Value = %d\n", val)
+	}
+	fmt.Println("For range loop end again and again...\n")
+}
+```
+
+三种形式：
+- `for {}`：类似于 while
+- `for i`：一般的按照下标循环
+- `for range`：range 遍历
+
+> `break` 和 `continue` 与其他语言一样
+
+## 条件
+
+### if-else
+```go
+func If(start, end int) {
+	// 这里 distance 的作用域是 if-else 块
+	if distance := end - start; distance > 100 {
+		fmt.Printf("It is too far, the distance is %d\n", distance)
+	} else {
+		fmt.Printf("It is not far, distance is %d\n", distance)
+	}
+}
+```
+
+注意：
+- `else` 分支可以没有
+
+### switch
+
+```go
+func ChooseFruit(fruit string) {
+	switch fruit {
+	case "apple":
+		fmt.Println("This is an apple.")
+	case "banana":
+		fmt.Println("This is what I don't like")
+	default:
+		fmt.Println("Is it a fruit coming from outer space?")
+	}
+}
+```
+
+要点：
+- `switch` 后面可以是基础类型和字符串，或者满足特定条件的结构体。
+- `case` 后面可以加条件判断
+
+> 注意：不需要 `break`
+
+# 其他
+
+## 错误处理
+```go
+import (
+	"errors"
+	"fmt"
+)
+
+type user struct {
+	name     string
+	password string
+}
+
+func findUser(users []user, name string) (v *user, err error) {
+	for _, u := range users {
+		if u.name == name {
+			return &u, nil
+		}
+	}
+	return nil, errors.New("not found")
+}
+
+func main() {
+	// 一种方式
+	func main() {
+	u, err := findUser([]user{{"ele", "1234455"}}, "ele")
+	if err != nil {
+		fmt.Println(err)
+		return
+	}
+	fmt.Println(u.name, &u, &err) // ele 0xc0000a2018 0xc00008e020
+
+	// 另一种方式
+	// 注意，在这里新声明了两个变量，作用域仅限于 if-else 块
+	if u, err := findUser([]user{{"ele", "1234455"}}, "nana"); err != nil {
+		fmt.Println(err, &u, &err)
+		return
+	} else {
+		fmt.Println(u.name) // not found 0xc0000a2028 0xc00008e040
+	}
+}
 }
 ```
 
