add golang weekly #277 and some basic notes for golang

--- a/Programming language/golang/基本语法/安装、环境与命令.md
+++ b/Programming language/golang/基本语法/安装、环境与命令.md
@@ -18,3 +18,64 @@ func main() {
 ## 常用命令
 - `go run xxx.go`：运行代码
 - `go build`：生成可执行文件
+
+# 依赖管理
+## 演进
+### GOPATH
+一个项目的目录结构：
+```
+$GOPATH
+├── bin // 项目编译的二进制文件
+├── pkg // 项目编译的中间产物，加速编译
+└── src // 项目源码，直接依赖 src 下的代码。此外，go get 下载最新版本的包也会保存在这里面
+```
+
+### go vendor
+go 1.5 官方引入管理包依赖的方式。通过给每个项目引入一份依赖的副本，解决多个项目需要同一个 package 依赖的冲突问题
+- 项目目录下增加 vendor 文件，所有依赖包副本形式放在 $ProjectRoot/vendor
+- 依赖寻址方式：vendor => GOPATH
+
+弊端：
+- 无法控制依赖的版本
+- 更新项目有可能出现依赖冲突，从而导致编译错误。
+
+### go mod
+Go1.11版本之后官方推出的版本管理工具，并且从Go1.13版本开始，go module将是Go语言默认的依赖管理工具。
+- 目标：定义版本规则和管理项目依赖关系
+- 通过 go.mod 文件管理依赖包版本
+- 通过 `go get/go mod` 指令工具管理依赖包
+- 包不再保存在 `GOPATH` 中，而是被下载到了 `$GOPATH/pkg/mod` 路径下.
+
+
+参考:
+- [go mod 和 go vendor 使用与区别](https://zhuanlan.zhihu.com/p/374044583)
+
+## 依赖管理三要素
+### 1. 配置文件，描述依赖：`go.mod`
+go.mod文件记录了项目所有的依赖信息，其结构大致如下：
+```
+module github.com/Q1mi/studygo/blogger // 依赖管理基本单元
+
+go 1.12 // 原生库
+
+require ( // 单元依赖
+ github.com/DeanThompson/ginpprof v0.0.0-20190408063150-3be636683586
+ github.com/gin-gonic/gin v1.4.0
+ github.com/go-sql-driver/mysql v1.4.1
+ github.com/jmoiron/sqlx v1.2.0
+ github.com/satori/go.uuid v1.2.0
+ google.golang.org/appengine v1.6.1 // indirect
+)
+```
+
+#### 依赖配置：version
+- 语义化版本：`${MAJOR}.${MINOR}.${PATCH}`
+  - 例如：`v1.2.0`
+- 基于 commit 伪版本：`vX.0.0-yyyymmddhhmmss-abcdefgh1234`
+  - 例如：`v1.0.0-20230912134442-10cd98245c8c`
+
+### 2. 中心仓库管理依赖库：GOPROXY
+`GOPROXY="https://proxy1.cn,https://proxy2.cn,direct"`
+- 服务站点 URL 列表，“direct”表示源站
+
+### 3. 本地工具：`go get/go mod`
