update some golang basic notes and golang weekly #478

--- a/Programming language/golang/基本语法/安装、环境与命令.md
+++ b/Programming language/golang/基本语法/安装、环境与命令.md
@@ -18,6 +18,11 @@ func main() {
 ## 常用命令
 - `go run xxx.go`：运行代码
 - `go build`：生成可执行文件
+- `go fmt`：格式化代码
+
+## 常用工具
+- `gofmt`：格式化代码
+- `goimports`：gofmt + 依赖包管理
 
 # 依赖管理
 ## 演进
