--- a/Programming language/golang/基本语法/测试.md
+++ b/Programming language/golang/基本语法/测试.md
@@ -3,3 +3,20 @@
 - 所有测试文件以 `_test.go` 结尾
 - 函数签名：`func TestXxx(*testing.T)`
   - 初始化逻辑放在 `TestMain` 中
+
+运行：`go test [flgs]`
+- 例如：`$ go test hello_test.go hello.go --cover`
+
+覆盖率：`go test xxx_test.go xxx.go --cover`
+- 如何衡量代码是否经过了足够的测试？
+- 如何评价项目的测试水准？
+- 如何评估项目是否达到了高水准测试等级？
+
+技巧：
+- 一般覆盖率 50%～60%，较高覆盖率 80%+
+- 测试分支相互独立、全面覆盖
+- 测试单元粒度足够小，函数单一职责
+
+## Mock 测试
+
+## 基准测试
