--- a/Programming language/golang/基本语法/类型、方法、控制结构.md
+++ b/Programming language/golang/基本语法/类型、方法、控制结构.md
@@ -133,6 +133,14 @@ type rune = int32
 - 不支持`make`初始化，不支持追加元素，不支持扩容
 
 ### 切片：`[]type`
+```go
+type slice struct {
+	array unsafe.Pointer
+	len int
+	cap int
+}
+```
+
 要点：
 - 初始化
   - 直接初始化：`s1 := []int{1,2,3}`
@@ -142,6 +150,9 @@ type rune = int32
   - 容量不够会发生扩容，创建新的切片，所以这里左边需要赋值操作
 - 获取元素数量：`len(s1)`
 - 获取切片容量：`cap(s1)`
+- 本质是一个数组片段的描述，包括数组指针、片段的长度和片段的容量（不改变内存分配情况下的最大长度）
+- **切片操作并不复制切片指向的元素**
+- 创建一个新的切片会复用原来切片的底层数组
 
 ### 子切片：`arr[start:end]`
 
@@ -411,7 +422,23 @@ func ChooseFruit(fruit string) {
 
 # 其他
 
-## 错误处理
+## `defer`
+```go
+defer func() {
+	if e := recover(); e != nil {
+		// do something ....
+	}
+}()
+```
+
+要点
+- 多个 `defer` 的语句是先定义，后执行（栈的方式）
+- `defer` 语句会在函数调用前返回
+- return 之后的语句先执行，defer 之后的语句后执行
+  - 如果 defer 中修改了返回值，实际返回的值是按照defer修改后的值进行返回。因为 defer 和 return 的执行顺序是先为返回值赋值，然后执行 defer，最后 return 到函数调用处。
+- defer + panic：按照 defer 的栈顺序，输出 panic 触发之前定义好的 defer
+
+## 错误和异常处理
 ```go
 import (
 	"errors"
@@ -453,6 +480,29 @@ func main() {
 }
 }
 ```
+
+要点：
+- `error` 尽可能提供简明的上下文信息链，方便定位问题
+- `panic` 用于异常的情况
+- `recover` 生效范围：当前 goroutine 中被 `defer` 的函数
+
+### `panic()`
+
+### `recover()`
+```go
+defer func() {
+	if e := recover(); e != nil {
+		err = fmt.Errorf("panic: %v\n%s", e, debug.Stack())
+	}
+}()
+```
+
+要点：
+- `recover` 只能在被 `defer` 的函数中使用
+- 嵌套无法生效
+- 只在当前 goroutine 生效
+- 如果需要更多的上下文信息，可以在 `recover` 后在 log 中记录当前的调用栈
+
 
 # 参考
 - [极客时间：Go 进阶训练营]()
