add golang weekly 479 and some updates

--- a/Programming language/golang/基本语法/并发编程.md
+++ b/Programming language/golang/基本语法/并发编程.md
@@ -71,6 +71,46 @@ func main() {
 - 从 channel 接收：`i <- c`
 - 使用 `range` 遍历: `for i := range c {...`
 
+## select
+
+要点：
+- select 结构会等待 case 后面的语句返回，无论哪一个返回都会立刻执行 case 下的代码。如果多个 case 同时被触发，则**随机选取**一个执行。
+- 如果一个 select 控制结构中包含一个 default 表达式，那么这个 select 并不会等待其他的 Channel 准备就绪，而是会非阻塞地读取或者写入数据
+```go
+func selectNoblock() {
+	ch := make(chan int)
+	select {
+	case i := <-ch:
+		println(i)
+	default:
+		println("default")
+	}
+}
+
+func main() {
+	selectNoblock() // 输出 default
+}
+```
+- 当 select 不包含任何 case 时（即 `select {}`），会直接阻塞当前的 Goroutine
+- 当 select 只包含一个 case 时，Go 语言内部会将这个 select 语句改写成 if 条件语句。例如：
+```go
+select {
+case v, ok <- ch:
+	// ...
+}
+```
+会被改写成
+```go
+if ch == nil {
+	block() // 阻塞，当前 goroutine 会被直接挂起并且永远不会被唤醒
+}
+v, ok := <- ch
+```
+- 
+
+参考：
+- [GO-select 的实现原理](https://juejin.cn/post/7201423410168741946)
+
 ## 并发安全
 ### 锁（Lock）
 > 使用场景：共享变量/内存
