--- a/Programming language/golang/基本语法/类型、方法、控制结构.md
+++ b/Programming language/golang/基本语法/类型、方法、控制结构.md
@@ -328,6 +328,11 @@ func main() {
 	Func4("Ciao", 25, s...)
 }
 ```
+要点：
+
+
+参考：
+- [一文读懂 Go 函数调用](https://juejin.cn/post/7179778257036771365)
 
 # 控制结构
 
